--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/new-consultation-expansion-section/new-consultation-expansion-section.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/new-consultation-expansion-section/new-consultation-expansion-section.component.html
@@ -4,7 +4,7 @@
         <div fxLayout="row" fxLayoutAlign="space-between center"
             [ngClass]="{'closed-panel' : isEmpty && collapsed && !fixedExpanded}">
             <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
-                <mat-icon>{{ icon }}</mat-icon>
+                <mat-icon fontSet="material-icons-outlined">{{ icon }}</mat-icon>
                 <span class="title">{{ title }}</span>
             </div>
             <mat-icon *ngIf="isEmpty && collapsed && !fixedExpanded">add</mat-icon>
