--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -118,17 +118,19 @@
 						*ngIf="(hasInternmentEpisodeInThisInstitution && !hasMedicalDischarge && hasMedicalRole) || (hasInternmentEpisodeInThisInstitution && !epicrisisDoc?.confirmed && !hasMedicalRole)">
 						<mat-label class="actions-labels color-grey">
 							{{'ambulatoria.paciente.internacion.TAB_LABEL' | translate | uppercase }}</mat-label>
+						<ng-container *ngIf="!epicrisisDoc?.confirmed">
+							<ng-container
+								*appHasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD', 'ESPECIALISTA_EN_ODONTOLOGIA']">
+								<button mat-menu-item class="actions" (click)="openInternmentAction(1)">
+									{{'ambulatoria.paciente.card.buttons.actions.EVOLUTION_NOTE' | translate}}</button>
+							</ng-container>
+						</ng-container>
 						<ng-container *ngIf="!epicrisisDoc">
 							<ng-container *ngIf="!anamnesisDoc?.confirmed">
 								<button mat-menu-item class="actions"
 									*appHasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR']"
 									(click)="openInternmentAction(0)">
 									{{'ambulatoria.paciente.card.buttons.actions.ANAMNESIS' | translate}}</button>
-							</ng-container>
-							<ng-container
-								*appHasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD', 'ESPECIALISTA_EN_ODONTOLOGIA']">
-								<button mat-menu-item class="actions" (click)="openInternmentAction(1)">
-									{{'ambulatoria.paciente.card.buttons.actions.EVOLUTION_NOTE' | translate}}</button>
 							</ng-container>
 							<ng-container *ngIf="anamnesisDoc?.confirmed && lastEvolutionNoteDoc?.confirmed">
 								<button mat-menu-item *appHasRole="['ESPECIALISTA_MEDICO']" class="actions"
