tg-7398. [FE] Nuevo comportamiento en la seccion Problemas

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.scss
@@ -43,3 +43,10 @@ mat-form-field {
 		text-decoration: underline;
 	}
 }
+
+.recomendado {
+	color: #979797;
+	font-family: Roboto, "Helvetica Neue", sans-serif;
+	font-size: 13px;
+	font-weight: lighter;
+}
