--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -75,119 +75,22 @@
 			</div>
 		</app-new-consultation-expansion-section>
 
-		<div id="problemas">
-			<app-new-document-section sectionTitle="ambulatoria.paciente.nueva-consulta.problemas.TITLE"
-				sectionImportance="ambulatoria.paciente.nueva-consulta.RECOMENDADO">
-				<div concept-form *ngIf="!this.readOnlyProblema else problemaForm">
-					<ng-container *ngIf="!ambulatoryConsultationProblemsService.getSnomedConcept() else problemaForm">
-						<app-concepts-search *ngIf="!searchConceptsLocallyFFIsOn else problemTypeaheadSearch"
-							[label]="'ambulatoria.paciente.nueva-consulta.problemas.CONCEPT_LABEL'"
-							(search)="ambulatoryConsultationProblemsService.openSearchDialog($event)">
-						</app-concepts-search>
+		<app-new-consultation-expansion-section
+			[title]="'ambulatoria.paciente.nueva-consulta.problemas.TITLE' | translate" icon="error_outlined"
+			[isEmpty]="ambulatoryConsultationProblemsService.isEmpty()" [collapsed]="false">
+			<div id="problemas">
+				<h5 class="recomendado" [translate]="'ambulatoria.paciente.nueva-consulta.RECOMENDADO'"></h5>
 
-						<ng-template #problemTypeaheadSearch>
-							<app-concept-typeahead-search [ecl]="ambulatoryConsultationProblemsService.getECL()"
-								[placeholder]="'ambulatoria.paciente.nueva-consulta.problemas.SEARCH_PLACEHOLDER'"
-								(conceptSelected)="ambulatoryConsultationProblemsService.setConcept($event)">
-							</app-concept-typeahead-search>
-						</ng-template>
-					</ng-container>
-
-				</div>
-
-				<ng-template #problemaForm>
-					<form [formGroup]="ambulatoryConsultationProblemsService.getForm()"
-						(ngSubmit)="this.readOnlyProblema ? this.editProblema(): ambulatoryConsultationProblemsService.addToList(reportFFIsOn)">
-
-						<mat-form-field appearance="outline">
-							<mat-label [translate]="'ambulatoria.paciente.nueva-consulta.problemas.CONCEPT_LABEL'">
-							</mat-label>
-							<input id="snomed-input" matInput type="text" formControlName="snomed" name="snomed"
-								readonly matTooltip="{{ ambulatoryConsultationProblemsService.getSnomedConcept().pt }}"
-								*ngIf="!this.readOnlyProblema">
-							<input id="snomed-input-new-consultation" matInput type="text" formControlName="snomed"
-								name="snomed" readonly *ngIf="this.readOnlyProblema">
-							<button id="clear" mat-button matSuffix color="warn" mat-icon-button
-								(click)="ambulatoryConsultationProblemsService.resetForm()"
-								*ngIf="!this.readOnlyProblema">
-								<mat-icon>close</mat-icon>
-							</button>
-						</mat-form-field>
-
-						<mat-form-field appearance="outline">
-							<mat-label [translate]="'ambulatoria.paciente.nueva-consulta.problemas.SEVERIDAD'">
-							</mat-label>
-							<mat-select id="severity-select" formControlName="severidad">
-								<mat-option *ngFor="let severityType of severityTypes" [value]="severityType.code">
-									{{severityType.display}}
-								</mat-option>
-							</mat-select>
-						</mat-form-field>
-
-						<div class="margin-checkbox">
-							<mat-checkbox id="cronico-checkbox" formControlName="cronico">
-								<span [translate]="'ambulatoria.paciente.nueva-consulta.problemas.CRONICO'"></span>
-							</mat-checkbox>
-						</div>
-
-						<mat-form-field appearance="outline">
-							<mat-label [translate]="'ambulatoria.paciente.nueva-consulta.problemas.FECHA_INICIO'">
-							</mat-label>
-							<input matInput id="fecha_inicio" [matDatepicker]="inicioDatePicker"
-								formControlName="fechaInicio" [min]="minDate"
-								[max]="ambulatoryConsultationProblemsService.getFechaInicioMax()"
-								(dateChange)="ambulatoryConsultationProblemsService.checkValidFechaFin()">
-							<mat-datepicker-toggle matSuffix [for]="inicioDatePicker"></mat-datepicker-toggle>
-							<mat-datepicker #inicioDatePicker></mat-datepicker>
-						</mat-form-field>
-
-						<mat-form-field appearance="outline">
-							<mat-label [translate]="'ambulatoria.paciente.nueva-consulta.problemas.FECHA_FIN'">
-							</mat-label>
-							<input matInput id="fecha_fin" [matDatepicker]="finDatePicker" formControlName="fechaFin"
-								[min]="minDate" [max]="today"
-								(dateChange)="ambulatoryConsultationProblemsService.checkValidFechaFin()">
-							<mat-datepicker-toggle matSuffix [for]="finDatePicker"></mat-datepicker-toggle>
-							<mat-datepicker #finDatePicker></mat-datepicker>
-							<mat-error *ngIf="ambulatoryConsultationProblemsService.hasError('min', 'fechaFin')"
-								[translate]="'ambulatoria.paciente.nueva-consulta.problemas.errors.FECHA_FIN_MIN'">
-							</mat-error>
-							<mat-error
-								*ngIf="ambulatoryConsultationProblemsService.hasError('matDatepickerMax', 'fechaFin')"
-								[translate]="'forms.MAX_DATE_TODAY'">
-							</mat-error>
-							<mat-error
-								*ngIf="ambulatoryConsultationProblemsService.hasError('required_init_date', 'fechaFin')"
-								[translate]="'forms.REQUIRED_INIT_DATE'">
-							</mat-error>
-						</mat-form-field>
-
-						<div align="end" *ngIf="!this.readOnlyProblema">
-							<button id="submit_problema" class="uppercase" mat-raised-button color="primary"
-								type="submit">
-								<span [translate]="'ambulatoria.paciente.nueva-consulta.problemas.buttons.ADD'"></span>
-							</button>
-						</div>
-
-						<div align="end" *ngIf="this.readOnlyProblema">
-							<button id="edit_problema" class="uppercase" mat-raised-button color="primary"
-								type="submit">
-								<span [translate]="'ambulatoria.paciente.nueva-consulta.problemas.buttons.SAVE'"></span>
-							</button>
-						</div>
-
-					</form>
-				</ng-template>
-
-				<app-document-section-table data-display
-					tableTitle="ambulatoria.paciente.nueva-consulta.problemas.TABLE_TITLE"
-					[columns]="ambulatoryConsultationProblemsService.getColumns()"
+				<app-document-section-table [columns]="ambulatoryConsultationProblemsService.getColumns()"
 					[data]="ambulatoryConsultationProblemsService.getProblemas()">
 				</app-document-section-table>
 
-			</app-new-document-section>
+				<button mat-button type="button" (click)="addProblem()" color="primary" id="add-problem-button">
+					+ {{ 'ambulatoria.paciente.nueva-consulta.problemas.buttons.ADD' | translate }}
+				</button>
 
-		</div>
+			</div>
+		</app-new-consultation-expansion-section>
 
 		<app-new-consultation-expansion-section
 			[title]="'ambulatoria.paciente.nueva-consulta.datos-antropometricos.TITLE' | translate" icon="accessibility"
