--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/documents-summary/documents-summary.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/documents-summary/documents-summary.component.html
@@ -75,14 +75,18 @@
 						<ng-container>
 							<mat-icon *ngIf="documentSearch.document.documentType != 'Epicrisis' && documentSearch.document.documentType != 'Anamnesis'"mat-list-icon fontSet="material-icons-outlined" color="primary">assignment</mat-icon>
 							<mat-icon *ngIf="documentSearch.document.documentType == 'Anamnesis'" mat-list-icon fontSet="material-icons-outlined" color="primary" svgIcon="assignment_return"></mat-icon>
-							<mat-icon *ngIf="documentSearch.document.documentType == 'Epicrisis'" mat-list-icon fontSet="material-icons-outlined" color="primary">assignment_turned_in</mat-icon>
+							<mat-icon *ngIf="documentSearch.document.documentType == 'Epicrisis' && documentSearch.document.confirmed" mat-list-icon fontSet="material-icons-outlined" color="primary">assignment_turned_in</mat-icon>
+							<mat-icon *ngIf="documentSearch.document.documentType == 'Epicrisis' && !documentSearch.document.confirmed" mat-list-icon fontSet="material-icons-outlined" class="empicrisis-draft">assignment_turned_in</mat-icon>
 						</ng-container>
 						<div fxLayout="column" fxLayoutGap="20px">
 							<span id="document-type" class="color-primary uppercase">
 								<ng-container *ngIf="documentSearch.document.documentType === 'Anamnesis'">
 									Evaluación de ingreso
 								</ng-container>
-								<ng-container *ngIf="documentSearch.document.documentType !== 'Anamnesis'">
+								<ng-container *ngIf="documentSearch.document.documentType === 'Epicrisis' && !documentSearch.document.confirmed">
+									<span class="empicrisis-draft">{{documentSearch.document.documentType}} (Borrador) </span>
+								</ng-container>
+								<ng-container *ngIf="documentSearch.document.documentType !== 'Anamnesis' && documentSearch.document.confirmed">
 									{{documentSearch.document.documentType}}
 								</ng-container>
 							</span>
