--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.scss
@@ -24,24 +24,8 @@ mat-form-field {
 	padding: 20px 0px 20px 10px;
 }
 
-.referencia {
-	font-family: Roboto, "Helvetica Neue", sans-serif;
-
-	h2 {
-		font-style: normal;
-		font-weight: 500;
-		font-size: 20px;
-	}
-
-	span {
-		font-size: 16px;
-		font-weight: 500;
-		cursor: pointer;
-	}
-
-	span:hover {
-		text-decoration: underline;
-	}
+.add-button {
+	font-size: 16px;
 }
 
 .recomendado {
