--- a/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.html
@@ -1,8 +1,7 @@
 <form [formGroup]="formMotivo" (ngSubmit)="saveAbsent()">
 	<div mat-dialog-content>
 		<section id="personal-data" fxLayout="column" fxLayoutGap="5px">
-
-			<div class="header-content" fxLayout="row" fxLayoutAlign="center">
+			<div class="header-content" fxLayout="row" fxLayoutAlign="start">
 				<mat-icon fxFlex="10%" fontSet="material-icons-outlined" color="primary">person</mat-icon>
 				<div fxLayout="column" fxLayoutAlign="center start">
 					<span class="mat-body-strong capitalize patient-name-title"
@@ -10,28 +9,31 @@
 						{{ viewPatientName(params.appointmentData) | uppercase }}
 					</span>
 					<div>
-						<span style="font-size: 16px;" id="patient_id" class="mat-body-strong">ID
+						<span style="font-size: 16px; font-weight: 300px;" id="patient_id" class="mat-body-strong">ID
 							{{params.appointmentData.patient.id}}
 						</span> •
-						<span style="font-size: 16px;" class="mat-body-strong"
+						<span style="font-size: 16px; font-weight: 300px" class="mat-body-strong"
 							*ngIf="params.appointmentData.patient.identificationNumber">
 							{{identificationType?.description}}
 							{{params.appointmentData.patient.identificationNumber}}
 						</span>
 					</div>
-					<div>
+					<div class="historia-clinica">
 						<a class="mat-body"
 							*appHasRole="['ESPECIALISTA_MEDICO','PROFESIONAL_DE_SALUD','ENFERMERO', 'ESPECIALISTA_EN_ODONTOLOGIA']"
 							[routerLink]="'/institucion/' + institutionId + '/ambulatoria/paciente/' + params.appointmentData?.patient?.id"
 							[state]="{ appointmentCoverageInfo: summaryCoverageData }" (click)="closeDialog()">
-							Ver historia clínica
+							{{'turnos.appointment.BUTTON_HISTORIA_CLINICA' | translate}}
+							
+						</a>
+						<a *appHasRole="['ESPECIALISTA_MEDICO','PROFESIONAL_DE_SALUD','ENFERMERO', 'ESPECIALISTA_EN_ODONTOLOGIA']"
+							[routerLink]="'/institucion/' + institutionId + '/ambulatoria/paciente/' + params.appointmentData?.patient?.id"
+							[state]="{ appointmentCoverageInfo: summaryCoverageData }"
+							target="_blank">
+							<mat-icon color="primary" fxFlex="10%" >open_in_new</mat-icon>
 						</a>
 					</div>
 				</div>
-				<button type="button" mat-icon-button color="primary" fxFlex="10%"
-					*ngIf="( hasRoleToEditPhoneNumber$ | async )" (click)="hideFilters()">
-					<mat-icon>edit</mat-icon>
-				</button>
 			</div>
 
 			<ng-container *ngIf="!hideFilterPanel else editAppointment">
@@ -55,6 +57,13 @@
 					<span class="mat-caption" [translate]="'turnos.appointment.phoneNumber.PHONE_NUMBER'">:</span>
 					<span class="mat-body patient-info coverage-text">{{formatPhonePrefixAndNumber()}}</span>
 				</div>
+				<button type="button" mat-icon-button color="primary" fxFlex="10%"
+					*ngIf="( hasRoleToEditPhoneNumber$ | async )" (click)="hideFilters()">
+					<mat-icon class="material-icons-outlined">edit</mat-icon>
+					<a class="mat-body">
+						{{'turnos.appointment.EDIT_PACIENT_INFO' | translate}}
+					</a>
+				</button>
 			</ng-container>
 
 			<ng-template #editAppointment>
@@ -106,9 +115,12 @@
 							</mat-error>
 						</mat-form-field>
 					</div>
-					<div align="end">
-						<button mat-flat-button color="primary" type="submit">
-							<span class="uppercase">Guardar</span>
+					<div class="confirm-buttons">
+						<button mat-stroked-button color="primary" btn-block type="button" (click)="hideFilters()">
+							<span [translate]="'turnos.appointment.CANCEL'"></span>
+						</button>
+						<button mat-flat-button color="primary" type="submit"  [disabled]="formEdit.invalid">
+							<span [translate]="'turnos.appointment.SAVE'"></span>
 						</button>
 					</div>
 				</form>
@@ -117,7 +129,7 @@
 		</section>
 
 		<section id="appointment" class="appointment-details" fxLayout="column">
-			<span class="mat-body-strong">Turno</span>
+			<span class="mat-body-strong">{{'turnos.appointment.TITLE' | translate}}</span>
 			<div fxLayout="column" fxLayoutGap="5px">
 				<div fxLayout="row" fxLayoutGap="5px" fxLayoutAlign="start">
 					<mat-icon fontSet="material-icons-outlined" color="primary" mat-list-icon [inline]="true"
@@ -136,7 +148,7 @@
 		</section>
 
 		<section id="state">
-			<span class="mat-body-strong">Estado de turno</span>
+			<span class="mat-body-strong">{{'turnos.appointment.APPOINTMENT_STATE' | translate}}</span>
 			<div class="appointment-actions" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px">
 
 				<button type="button" [disabled]="(hasRoleToChangeState$ | async) === false"
@@ -179,7 +191,7 @@
 
 			<div style="margin-top: 10px" *ngIf="isMotivoRequired()">
 				<mat-form-field [floatLabel]="'never'" appearance="outline">
-					<mat-label>Motivo</mat-label>
+					<mat-label>{{'turnos.appointment.MOTIVE' | translate}}</mat-label>
 					<textarea formControlName="motivo" placeholder="Describa el motivo" matInput type="text"
 						id="motivo"></textarea>
 					<mat-error *ngIf="hasError(formMotivo, 'required', 'motivo')" [translate]="'forms.REQUIRED'">
@@ -200,7 +212,7 @@
 			</div>
 			
 			<div class="observation-details">
-				<span class="mat-body-strong" *ngIf="!hideObservationTittle" 
+				<span class="mat-body-strong" *ngIf="!hideObservationTitle" 
 					[translate]="'turnos.appointment.observations.OBSERVATIONS'">
 				</span>
 				<div class="observation" *ngIf="observation && hideObservationForm">
@@ -223,7 +235,7 @@
 							<span [translate]="'turnos.appointment.observations.CANCEL'"></span>
 						</button>
 						<button mat-flat-button color="primary" type="submit" [disabled]="formObservations.invalid">
-							<span [translate]="'turnos.appointment.observations.SAVE'"></span>
+							<span [translate]="'turnos.appointment.SAVE'"></span>
 						</button>
 					</div>
 				</form>
@@ -236,15 +248,15 @@
 				*ngIf="downloadReportIsEnabled && !isAbsent() && ((hasRoleToDownloadReports$ | async) === true || params.hasPermissionToAssignShift)">
 				<mat-divider></mat-divider>
 				<section id="report" fxLayout="column">
-					<span class="mat-body-strong" fxLayout="row">Descargar informes</span>
+					<span class="mat-body-strong" fxLayout="row">{{'turnos.report.TITLE' | translate}}</span>
 					<section class="example-section">
 						<mat-checkbox class="example-margin" fxLayout="row"
 							(change)="enableDowndloadAnexo($event.checked)">
-							<span class="mat-body">Anexo II</span>
+							<span class="mat-body">{{'turnos.report.ANEXO' | translate}}</span>
 						</mat-checkbox>
 						<mat-checkbox class="example-margin" fxLayout="row"
 							(change)="enableDowndloadFormulario($event.checked)">
-							<span class="mat-body">Formulario V</span>
+							<span class="mat-body">{{'turnos.report.FORM' | translate}}</span>
 						</mat-checkbox>
 					</section>
 				</section>
