--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/template-concept-typeahead-search/template-concept-typeahead-search.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/template-concept-typeahead-search/template-concept-typeahead-search.component.html
@@ -4,14 +4,14 @@
 		<mat-autocomplete #auto="matAutocomplete" (optionSelected)="handleOptionSelected($event)" [displayWith]="getDisplayName">
 
 			<ng-container *ngIf="initialOptionsLoaded">
-				<mat-optgroup *ngIf="((templateOptions$ | async)?.length)" label="{{ 'historia-clinica.template-concept-search.TEMPLATE_OPTION_GROUP' | translate }}" >
-					<mat-option *ngFor="let option of templateOptions$ | async" [value]="option">
+				<mat-optgroup *ngIf="(templateOptions?.length)" label="{{ 'historia-clinica.template-concept-search.TEMPLATE_OPTION_GROUP' | translate }}" >
+					<mat-option *ngFor="let option of templateOptions" [value]="option">
 						{{option.data.description}}
 					</mat-option>
 				</mat-optgroup>
 
-				<mat-optgroup *ngIf="((conceptOptions$ | async)?.length)" label="{{ 'historia-clinica.template-concept-search.CONCEPT_OPTION_GROUP' | translate }}">
-					<mat-option *ngFor="let option of conceptOptions$ | async" [value]="option">
+				<mat-optgroup *ngIf="(conceptOptions?.length)" label="{{ 'historia-clinica.template-concept-search.CONCEPT_OPTION_GROUP' | translate }}">
+					<mat-option *ngFor="let option of conceptOptions" [value]="option">
 						{{option.data.pt.term}}
 					</mat-option>
 				</mat-optgroup>
