tg-7492  [FE] Agregar botón para cerrar epicrisis borrador

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/dialogs/epicrisis-dock-popup/epicrisis-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/dialogs/epicrisis-dock-popup/epicrisis-dock-popup.component.html
@@ -328,5 +328,11 @@
 				<span class="uppercase" [translate]="'internaciones.epicrisis.buttons.CONFIRM'"></span>
 			</button>
 		</div>
+		<div *ngIf="isDraft && canConfirmedDocument">
+			<button id="sign-confirm-draft" type="button" mat-raised-button color="primary"
+					*appHasRole="['ESPECIALISTA_MEDICO']" (click)="saveConfirmedDraft()">
+				<span class="uppercase"  [translate]="'internaciones.epicrisis.buttons.FINALIZE'"></span>
+			</button>
+		</div>
 	</div>
 </app-dock-popup>
