--- a/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.html
@@ -1,3 +1,8 @@
+<div fxLayout="row" fxLayoutAlign="end">
+	<button mat-icon-button mat-dialog-close>
+		<mat-icon style="font-size: 24px; color: rgba(0, 0, 0, 0.54)">close</mat-icon>
+	</button>
+</div>
 <form class="appointment-body" [formGroup]="formMotivo" (ngSubmit)="saveAbsent()">
 	<div mat-dialog-content class="ventana">
 		<section id="personal-data" fxLayout="column" fxLayoutGap="5px">
