--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -93,14 +93,16 @@
 						*ngIf="!((isNewConsultationButtonEnabled() && (hasMedicalRole || hasHealthProfessionalRole)) || (isNewConsultationButtonEnabled() && hasNurseRole))">
 						{{ 'ambulatoria.paciente.card.buttons.actions.ACTIONS' | translate | uppercase }}
 					</button>
-					<button id="nueva_consulta_ambulatoria" mat-flat-button color="primary" mat-button (click)="referenceNotificationService.hasReferenceNotification()"
-						*ngIf="isNewConsultationButtonEnabled() && (hasMedicalRole || hasHealthProfessionalRole)">
-						{{ 'ambulatoria.paciente.card.buttons.actions.NUEVA_CONSULTA' | translate | uppercase }}
-					</button>
-					<button id="nueva_consulta_enfermeria" mat-flat-button color="primary" mat-button (click)="openNuevaConsultaEnfermeria()"
-						*ngIf="isNewConsultationButtonEnabled() && hasNurseRole">
-						{{ 'ambulatoria.paciente.card.buttons.actions.NUEVA_CONSULTA' | translate | uppercase }}
-					</button>
+					<ng-container *ngIf="hasNewConsultationEnabled$ | async">
+						<button id="nueva_consulta_ambulatoria" mat-flat-button color="primary" mat-button (click)="referenceNotificationService.hasReferenceNotification()"
+							*ngIf="isNewConsultationButtonEnabled() && (hasMedicalRole || hasHealthProfessionalRole)">
+							{{ 'ambulatoria.paciente.card.buttons.actions.NUEVA_CONSULTA' | translate | uppercase }}
+						</button>
+						<button id="nueva_consulta_enfermeria" mat-flat-button color="primary" mat-button (click)="openNuevaConsultaEnfermeria()"
+							*ngIf="isNewConsultationButtonEnabled() && hasNurseRole">
+							{{ 'ambulatoria.paciente.card.buttons.actions.NUEVA_CONSULTA' | translate | uppercase }}
+						</button>
+					</ng-container>
 				</ng-container>
 
 				<ng-template #hasOdontologyRole>
